finished paginating player page and added courts list to main page

--- a/app/assets/stylesheets/courts.less
+++ b/app/assets/stylesheets/courts.less
@@ -1,16 +1,22 @@
-.tab-content{
-  margin-top: 20px;
-}
-
 #map-canvas {
   height: 500px;
   margin: 0;
   padding: 0;
 }
 
-.row {
-  margin-bottom: 10px;
+#search-button {
+ height: 40px;
+}
+
+#courtList {
+  margin-top: 10px;
+  height: 450px;
+  overflow-y: auto;
 }
 
 
-
+.court-row {
+  margin-bottom: 5px;
+  margin-right: 10px;
+  border-bottom: 1px solid #CFCFCF;
+}
