--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -2,14 +2,14 @@
 @import utils.Tags._
 
 @scripts = {
-    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/courts.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/courts.css")" />
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
 
     <script type="text/javascript">
         jQuery.noConflict();
 
         jQuery(function() {
-             jQuery( "#search-button" ).click( function ( e ) {
+             jQuery( "#search-button" ).submit( function ( e ) {
                 e.preventDefault();
 
                 // get value from text input box
@@ -26,13 +26,22 @@
                     success: function(data) {
                        jQuery('#search').val('');
                        var result = "";
+                        courtsInfo = [];
                         for(var i = 0; i < data.courts.length; i++) {
-                            result += '<div><a href="';
+                            result += '<div class="court-row"><a href="';
                             result += '/courts/' + data.courts[i].id + '/' + data.courts[i].slug;
                             result += '">' + data.courts[i].name + '</a></div>';
+
+                            var court = [data.courts[ i ].name, data.courts[i ].lat, data.courts[i ].lng, data.courts[i ].description, data.courts[i ].id,'/courts/' + data.courts[i].id + '/' + data.courts[i].slug];
+                            courtsInfo.push(court);
+
                         }
 
                        jQuery('#courtList' ).html(result);
+
+
+                       deleteMarkers();
+                       setMarkers(map, courtsInfo);
                     }
                 });
             });
@@ -43,7 +52,10 @@
 
         //currently set to Univeristy of Hawaii at Manoa as deafult
         var uh = new google.maps.LatLng(21.2970, -157.8170);
-        var hawaii = new google.maps.LatLng(21.4814, -157.9464)
+        var hawaii = new google.maps.LatLng(21.4814, -157.9464);
+        var map;
+        var markers = [];
+
 
         function initialize() {
 
@@ -53,21 +65,21 @@
                 zoom: 10
             };
 
-            var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+            map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-            setMarkers(map, courts);
-
+            setMarkers(map, courtsInfo);
+/*
             // Try HTML5 geolocation
             if(navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position) {
                     var pos = new google.maps.LatLng(position.coords.latitude,
                     position.coords.longitude);
 
-                    /*var infowindow = new google.maps.InfoWindow({
-                        map: map,
-                        position: pos,
-                        content: 'Location found using HTML5.'
-                    });*/
+                   // var infowindow = new google.maps.InfoWindow({
+                   //     map: map,
+                   //     position: pos,
+                   //     content: 'Location found using HTML5.'
+                   // });
 
                     map.setCenter(pos);
                     map.setZoom(13)
@@ -78,11 +90,11 @@
                 // Browser doesn't support Geolocation
                 handleNoGeolocation(false);
             }
-
+*/
 
         }
 
-        var courts = [
+        var courtsInfo = [
             @for(court <- courts) {
                 ['@court.getName', @court.getAddress.getLat, @court.getAddress.getLng, '@court.getDescription', @court.getId, '@routes.Courts.getCourt(court.getId, slugify(court.getName))' ],
             }
@@ -92,16 +104,18 @@
 
         function setMarkers(map, locations) {
             for (var i = 0; i < locations.length; i++) {
-                var court = courts[i];
+                var court = courtsInfo[i];
                 var myLatLng = new google.maps.LatLng (court[1], court[2]);
                 var marker = new google.maps.Marker ({
                     position : myLatLng,
                     map : map,
+                    animation: google.maps.Animation.DROP,
                     title : court[0]
                 });
-                var description = "<b>" + court[0] + "</b></br>" + court[3] + "</br><a href='" + court[5] + "'>more info</a>";
+                var description = "<b>" + court[0] + "</b></br><a href='" + court[5] + "'>more info</a>";
 
                 bindInfoWindow(marker, map, infowindow, description);
+                markers.push(marker); // put into array
             }
         }
 
@@ -131,6 +145,16 @@
             map.setZoom(12);
         }
 
+        // Deletes all markers in the array by removing references to them.
+        function deleteMarkers() {
+            for (var i = 0; i < markers.length; i++) {
+                markers[i].setMap(null);
+            }
+
+            markers = [];
+        }
+
+
 
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
@@ -142,8 +166,6 @@
 @Main(title, isLoggedIn: Boolean, scripts) {
     <div class="container">
 
-            <!-- Map -->
-        <div id="map" class="tab-pane fade in active">
 
            <!-- <div class="row">
                 <div class="col-md-12">
@@ -153,28 +175,30 @@
 
 
             <div class="row">
+                <!-- Map -->
                 <div class="col-md-9">
                     <div id="map-canvas"></div>
                 </div>
 
                 <div class="col-md-3">
+                    <form id="search-button">
                     <div class="input-group">
-                        <input id="search" type="text" class="form-control"/>
+                        <input id="search" type="text" placeholder="Enter part of a court name" class="form-control"/>
                         <span class="input-group-btn">
-                            <button id="search-button" class="btn btn-default" type="button">Search</button>
+                            <button  class="btn btn-default" type="submit">Search</button>
                         </span>
                         </div>
+                    </form>
 
                         <div id="courtList">
                         @for(court <- courts) {
-                            <div>
-                                <td><a href="@routes.Courts.getCourt(court.getId, slugify(court.getName))">@court.getName</a></td>
+                            <div class="court-row">
+                                <a href="@routes.Courts.getCourt(court.getId, slugify(court.getName))">@court.getName</a>
                             </div>
                         }
                         </div>
                 </div>
             </div>
-        </div>
 
     </div>
 
