--- a/app/views/user/Validate.scala.html
+++ b/app/views/user/Validate.scala.html
@@ -3,7 +3,7 @@
 @Main(title, isLoggedIn) {
    <div class="container">
    @if(isLoggedIn) {
-       <p>Congratulations on Registering.</p>
+       <p>Congratulations on Registering!</p>
    } else {
        <p>An error occurred. Please register again.</p>
    }
