--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,6 +6,26 @@ body {
   }
 }
 
+.img-one {
+    background-size: cover;
+    background-position: center;
+    height: 20px;
+    width: 20px;
+}
+
+
+.img-two {
+    background-size: cover;
+    background-position: center;
+    height: 50px;
+}
+
+.img-three {
+    background-size: cover;
+    background-position: center;
+    height: 200px;
+}
+
 .btn {
   border-color: #F77E07;
   background-color: #F77E07;
