--- a/app/views/leagues/SearchLeagues.scala.html
+++ b/app/views/leagues/SearchLeagues.scala.html
@@ -8,18 +8,16 @@
     <div class="row-search hidden-xs">
     <div class="col-md-4">
     
-  
+  <!--IMPLEMENT LATER
     <div class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
         Sort By<span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="@routes.Leagues.allLeagues("location asc", 0)">Location</a></li>
         <li><a href="@routes.Leagues.allLeagues("startDate asc", 0)">Start Date</a></li>
-        <hr>
-        <li><a href="@routes.Leagues.allLeagues("leagueName asc", 0)">All</a>
+        <li><a href="@routes.Leagues.allLeagues("leagueName asc", 0)">Name</a>
       </ul>
-    </div>
+    </div>-->
      
  <h2>You searched for:  "@term"</h2>
       </div>
@@ -35,12 +33,17 @@
       </thead>
       <tbody data-link="row" class="rowlink">
         @for(league <- currentPage.getList()) {
-         @if(league.getPubOrPrivate().equals("public")){
+         @if(league.getId() != 1){
          <tr>
             <td><a href="@routes.Leagues.leagues(league.getId)">@league.getLeagueName()</a></td>
             <td>@league.getStartDate()</td>
             <td>@league.getNumTeamsInLeague() of @league.getNumTeams()</td>
-            <td class="hidden-xs">@league.getLocation()</td> 
+            @if(league.getCourt != null){
+            <td class="hidden-xs">@league.getCourt().getName()</td>
+            }
+            @if(league.getCourt == null){
+            <td class="hidden-xs"></td>
+            } 
          </tr>
          }
         }
