--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -2,8 +2,67 @@
 
 @import helper._
 @import bootstrap3._
+@import utils.Tags._
 
-@Main(title, isLoggedIn) {
+
+@scripts = {
+  @if(league.getCourt() != null){
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/courts.css")">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
+    @* <script src="@routes.Assets.at("javascripts/courts-map.js")" type="text/javascript"></script> *@
+
+    <script type="text/javascript">
+
+        //currently set to Univeristy of Hawaii at Manoa as deafult
+        var uh = new google.maps.LatLng(21.2970, -157.8170);
+        var hawaii = new google.maps.LatLng(21.4814, -157.9464)
+
+        function initialize() {
+
+            setMarkers();
+            
+        }
+        
+        var courts = [
+          '@league.getCourt().getName', @league.getCourt().getAddress.getLat, @league.getCourt().getAddress.getLng, '@league.getCourt().getDescription', @league.getCourt().getId
+        ]
+        
+        var infowindow =  new google.maps.InfoWindow();
+        
+        function setMarkers() {
+                var myLatLng = new google.maps.LatLng (courts[1], courts[2]);
+                var mapOptions = {
+                        //center: new google.maps.LatLng(21.2970, -157.8170),
+                        center: myLatLng,
+                        zoom: 15
+                };
+                
+                var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions)
+                var marker = new google.maps.Marker ({
+                    position : myLatLng,
+                    map : map,
+                    title : courts[0]
+                });
+                var description = "<b>" + courts[0] + "</b></br>" + courts[3] + "</br><a href='" + "#" + "'>more info</a>";
+
+                bindInfoWindow(marker, map, infowindow, description);
+                
+        }
+        
+        function bindInfoWindow(marker, map, infowindow, strDescription) {
+            google.maps.event.addListener(marker, 'click', function() {
+                //infowindow.close();
+                infowindow.setContent(strDescription);
+                infowindow.open(map, marker);
+            });
+        }
+        
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  }
+}
+
+@Main(title, isLoggedIn, scripts) {
 
       @if(league.getId() == 1){
       <div id="leagueStart" class="modal fade" data-backdrop="static">
@@ -78,7 +137,7 @@
                     help = "")
                     
                   @bootstrap3.selectInt(leagueForm("numGames"),
-                    label = "Number of Games",
+                    label = "Number of Games per Team",
                     optionMap = models.leagues.League.num(),
                     isMultiple = false,
                     help = "")
@@ -103,7 +162,7 @@
       </script> 
       }
       
-      @if(league.getRegStep() == 2){
+      @if(league.getRegStep() == 3){
       <div id="leagueStart3" class="modal fade" data-backdrop="static"> 
           <div class="modal-dialog">
               <div class="modal-content">
@@ -137,7 +196,7 @@
         });
       </script> 
       }
-      @if(league.getRegStep() == 3){
+      @if(league.getRegStep() == 2){
       <div id="leagueStart4" class="modal fade" data-backdrop="static"> 
           <div class="modal-dialog">
               <div class="modal-content">
@@ -230,18 +289,25 @@
       <div class="col-md-8">
       
         <div class="well">
-          <h2>Schedule 
-           <a href="@routes.Leagues.editSchedule()" class="btn btn-primary btn-md pull-right" role="button">Edit Schedule</a> </br>
-          </h2>
+          <h1>Schedule 
+           <!--<a href="@routes.Leagues.editSchedule()" class="btn btn-primary btn-md pull-right" role="button">Edit Schedule</a> </br>-->
+          </h1>
           <table>
-            <tr><td><h3>Thursday, April 10, 2014</h3></td></tr>
-            @for(teams <- teamsInLeague){
-              <tr><td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span><p>@teamsInLeague.get(0).getTeamName()</p></span></a></td>
-              <td><p> vs </p></td>
-              <td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span><p>@teamsInLeague.get(1).getTeamName()</p></span></a></td></tr>
+            @for(teams <- league.getScheduleList()){
+              <tr><td><h3>@teams.substring(0, teams.indexOf("-"))</h3></td></tr>
+              @System.out.println(teams.substring(teams.indexOf("-"), teams.indexOf("~")))
+              @System.out.println(teams.substring(teams.indexOf("~")))
+              <tr><td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getTeamName()</p></span></a></td>
+              <td class = "vs"><p> vs &nbsp&nbsp&nbsp&nbsp</p></td>
+              <td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getTeamName()</p></span></a></td></tr>
             }
           </table>
         </div>
+        @if(league.getCourt() != null){
+          <div class = "well">
+            <div id="map-canvas"></div>
+          </div>
+        }
       </div>
       
       <div class="col-md-4">
@@ -286,20 +352,13 @@
           <table border="1">
             <tr><td><h3>Teams</h3></td><td><h3>W</h3></td><td><h3>L</h3></td><td><h3>Points Per Game</h3></td><td><h3>Points Against</h3></td></tr>
             @for(teams <- teamsInLeague){
-              <tr><td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span>@teams.getTeamName()</span></a></td>
-              <td>3</td><td>0</td><td>50</td><td>40</td></tr>
+              <tr><td><img src="@teams.getImageUrl()" class="img-two"><a href = "#"><span>@teams.getTeamName()</span></a></td>
+              <td>@teams.getWins()</td><td>@teams.getLosses()</td><td>@teams.getPointsFor()</td><td>@teams.getPointsAgainst()</td></tr>
             }
           </table>
         </div>
-      </div>
-      
-    </div>
-    
-    <div class="row">
-
-      <div class="col-md-12">
-        <div class="well">
-          <h1>League Pictures</h1>
+        <div class = "well">
+        <h1>League Pictures</h1>
         
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -312,19 +371,15 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                    <img src="@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")" alt="..."
-                      height="500" width="450px">
+                    <div class ="img-three" style = "background-image: url('@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")');"></div>
                     <div class="carousel-caption"></div>
                   </div>
                   <div class="item">
-                    <img src="http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG"
-                      alt="..." height="500" width="450px">
+                    <div class ="img-three" style = "background-image: url('http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG');"></div>
                     <div class="carousel-caption">For Hawaii Hoopers</div>
                   </div>
                   <div class="item">
-                    <img
-                      src="http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384"
-                      alt="..." height="500" width="450px">
+                    <div class ="img-three" style = "background-image: url('http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384');"></div>
                     <div class="carousel-caption">Meet our team</div>
                   </div>
             </div>
@@ -337,10 +392,10 @@
               <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
           </div>
-        
         </div>
       </div>
       
     </div>
+    
   </div>
 }
